tests/NormalTests/paczka1/small_fuzzy/78772506.err
Error in line 1: R9JlS6fIuw Sa3a 63,0
Error in line 2: KasrGG3j6A S841 26,6
Error in line 6: Nzf S434 56,9
Error in line 4: KasrGG3j6A S638 97,1
Error in line 5: R9JlS6fIuw S434 177,0
Error in line 15: zpWX8Q S638 44,3
